# postgres-cxx-client

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.cmake/: PostgresCxxClientConfig.cmake
docker/: copycontext.sh  entrypoint.sh  prepare.sh
docs/: intro.md
examples/: CMakeLists.txt
examples/src/: 001_GetStarted.cpp  101_GetStarted.cpp  102_GetStartedPool.cpp  103_Headers.cpp  104_Config.cpp  105_Errors.cpp  106_Exec.cpp  107_Prepare.cpp  main.cpp  usage.cpp
include/postgres/: Assert.h  Binary.h  Classifier.h  Client.h  Command.h  Config.h  Connection.h  Consumer.h  Context.h  Error.h  Field.h  Fwd.h  Generators.h  Job.h  Oid.h  OidBinding.h  Postgres.h  PrepareData.h  PreparedCommand.h  PreparingStatement.h  Receiver.h  Result.h  Row.h  Statement.h  Status.h  Time.h  Timestamp.h  Transaction.h  Tuple.h  Visitable.h  Visitors.h
include/postgres/internal/: Assert.h  Bytes.h  Channel.h  Classifier.h  ConnectionPool.h  Context.h  Dispatcher.h  IChannel.h  Job.h  OidBinding.h  Slot.h  Visitors.h  Worker.h
include/private/postgres/internal/: Job.h  Worker.h
include/public/postgres/: Command.h  Context.h  Fwd.h  Row.h  Statement.h  Status.h  Visitable.h
src/: Channel.cpp  Client.cpp  Command.cpp  Config.cpp  Connection.cpp  ConnectionPool.cpp  Consumer.cpp  Context.cpp  Dispatcher.cpp  Error.cpp  Field.cpp  IChannel.cpp  Job.cpp  PrepareData.cpp  PreparedCommand.cpp  PreparingStatement.cpp  Receiver.cpp  Result.cpp  Row.cpp  Slot.cpp  Statement.cpp  Status.cpp  Time.cpp  Timestamp.cpp  Transaction.cpp  Tuple.cpp  Visitable.cpp  Visitors.cpp  Worker.cpp
test/src/: Migration.cpp  Migration.h  TestConfig.cpp  TestConnection.cpp  TestData.cpp  TestPrepared.cpp  TestResult.cpp  TestTransaction.cpp  TestVisitor.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  main.cpp
tests/src/: ChannelMock.cpp  ChannelTest.cpp  ClientTest.cpp  CommandTest.cpp  Connect.h  ConnectionTest.cpp  ContextTest.cpp  DispatcherTest.cpp  FieldTest.cpp  Migration.cpp  Migration.h  ReceiverTest.cpp  ResultTest.cpp  RowTest.cpp  Samples.h  StatementTest.cpp  TestClient.cpp  TestCommand.cpp  TestConfig.cpp  TestConnection.cpp  TestData.cpp  TestField.cpp  TestPrepared.cpp  TestReceiver.cpp  TestResult.cpp  TestStatement.cpp  TestTime.cpp  TestTimestamp.cpp  TestTransaction.cpp  TestVisitor.cpp  TimeTest.cpp  TimestampSamples.h  Timestamps.h  TransactionTest.cpp  WorkerTest.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: ChannelFake.cpp  ChannelFake.h  ChannelMock.h  ChannelTest.cpp  ClientTest.cpp  CommandTest.cpp  ConfigTest.cpp  ConnectionTest.cpp  ContextTest.cpp  DispatcherTest.cpp  FieldTest.cpp  ReceiverTest.cpp  ResultTest.cpp  Samples.cpp  Samples.h  StatementTest.cpp  TableTest.cpp  TimeTest.cpp  TransactionTest.cpp  WorkerTest.cpp
tools/docgen/: Cargo.toml  run.sh
tools/docgen/src/: main.rs
tools/visitgen/: Cargo.toml
tools/visitgen/src/: main.rs
